# Chat__App

./: .gitignore  Chat_App.sln
Chat_App/: CMakeLists.txt  Chat_App.cpp  Chat_App.h  Chat_App.qrc  Chat_App.ui  Chat_App.vcxproj  Chat_App.vcxproj.filters  main.cpp
Chat_App/Message/: message.cpp
Chat_App/Room/: room.cpp
